--- a/index.html
+++ b/index.html
@@ -1,239 +1,78 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <title>Project Georgia</title>
-	<style>
-    .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-    }
-
-    @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-    }
-	  
-		  /* GLOBAL STYLES
-	-------------------------------------------------- */
-	/* Padding below the footer and lighter body text */
-
-	body {
-	  padding-top: 3rem;
-	  padding-bottom: 3rem;
-	  color: #5a5a5a;
-	}
-
-
-	/* CUSTOMIZE THE CAROUSEL
-	-------------------------------------------------- */
-
-	/* Carousel base class */
-	.carousel {
-	  margin-bottom: 4rem;
-	}
-	/* Since positioning the image, we need to help out the caption */
-	.carousel-caption {
-	  bottom: 3rem;
-	  z-index: 10;
-	}
-
-	/* Declare heights because of positioning of img element */
-	.carousel-item {
-	  height: 32rem;
-	}
-	.carousel-item > img {
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  min-width: 100%;
-	  height: 32rem;
-	}
-
-
-	/* MARKETING CONTENT
-	-------------------------------------------------- */
-
-	/* Center align the text within the three columns below the carousel */
-	.marketing .col-lg-4 {
-	  margin-bottom: 1.5rem;
-	  text-align: center;
-	}
-	.marketing h2 {
-	  font-weight: 400;
-	}
-	/* rtl:begin:ignore */
-	.marketing .col-lg-4 p {
-	  margin-right: .75rem;
-	  margin-left: .75rem;
-	}
-	/* rtl:end:ignore */
-
-
-	/* Featurettes
-	------------------------- */
-
-	.featurette-divider {
-	  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-	}
-
-	/* Thin out the marketing headings */
-	.featurette-heading {
-	  font-weight: 300;
-	  line-height: 1;
-	  /* rtl:remove */
-	  letter-spacing: -.05rem;
-	}
-
-
-	/* RESPONSIVE CSS
-	-------------------------------------------------- */
-
-	@media (min-width: 40em) {
-	  /* Bump up size of carousel content */
-	  .carousel-caption p {
-		margin-bottom: 1.25rem;
-		font-size: 1.25rem;
-		line-height: 1.4;
-	  }
-
-	  .featurette-heading {
-		font-size: 50px;
-	  }
-	}
-
-	@media (min-width: 62em) {
-	  .featurette-heading {
-		margin-top: 7rem;
-	  }
-	}
-    </style>
-  </head>
-  <body>
-	<header>
-	  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<div class="container-fluid">
-		  <a class="navbar-brand" href="#">Carousel</a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarCollapse">
-			<ul class="navbar-nav me-auto mb-2 mb-md-0">
-			  <li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="#">Home</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="#">Link</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link disabled">Disabled</a>
-			  </li>
-			</ul>
-			<form class="d-flex">
-			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-			  <button class="btn btn-outline-success" type="submit">Search</button>
-			</form>
-		  </div>
-		</div>
-	  </nav>
-	</header>
-
-	<main>
-
-	  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-		<div class="carousel-indicators">
-		  <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-		  <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		  <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		</div>
-		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-			<div class="container">
-			  <div class="carousel-caption text-start">
-				<h1>Example headline.</h1>
-				<p>Some representative placeholder content for the first slide of the carousel.</p>
-				<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-			  </div>
+		<title>Project Georgia</title>
+	</head>
+	<body>
+		<main>
+			<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
+				<a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
+				  <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+				  <span class="fs-5 fw-semibold">Collapsible</span>
+				</a>
+				<ul class="list-unstyled ps-0">
+				  <li class="mb-1">
+					<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+					  Home
+					</button>
+					<div class="collapse show" id="home-collapse">
+					  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+						<li><a href="#" class="link-dark rounded">Overview</a></li>
+						<li><a href="#" class="link-dark rounded">Updates</a></li>
+						<li><a href="#" class="link-dark rounded">Reports</a></li>
+					  </ul>
+					</div>
+				  </li>
+				  <li class="mb-1">
+					<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+					  Dashboard
+					</button>
+					<div class="collapse" id="dashboard-collapse">
+					  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+						<li><a href="#" class="link-dark rounded">Overview</a></li>
+						<li><a href="#" class="link-dark rounded">Weekly</a></li>
+						<li><a href="#" class="link-dark rounded">Monthly</a></li>
+						<li><a href="#" class="link-dark rounded">Annually</a></li>
+					  </ul>
+					</div>
+				  </li>
+				  <li class="mb-1">
+					<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
+					  Orders
+					</button>
+					<div class="collapse" id="orders-collapse">
+					  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+						<li><a href="#" class="link-dark rounded">New</a></li>
+						<li><a href="#" class="link-dark rounded">Processed</a></li>
+						<li><a href="#" class="link-dark rounded">Shipped</a></li>
+						<li><a href="#" class="link-dark rounded">Returned</a></li>
+					  </ul>
+					</div>
+				  </li>
+				  <li class="border-top my-3"></li>
+				  <li class="mb-1">
+					<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
+					  Account
+					</button>
+					<div class="collapse" id="account-collapse">
+					  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+						<li><a href="#" class="link-dark rounded">New...</a></li>
+						<li><a href="#" class="link-dark rounded">Profile</a></li>
+						<li><a href="#" class="link-dark rounded">Settings</a></li>
+						<li><a href="#" class="link-dark rounded">Sign out</a></li>
+					  </ul>
+					</div>
+				  </li>
+				</ul>
 			</div>
-		  </div>
-		  <div class="carousel-item">
-			<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-			<div class="container">
-			  <div class="carousel-caption">
-				<h1>Another example headline.</h1>
-				<p>Some representative placeholder content for the second slide of the carousel.</p>
-				<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="carousel-item">
-			<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-			<div class="container">
-			  <div class="carousel-caption text-end">
-				<h1>One more for good measure.</h1>
-				<p>Some representative placeholder content for the third slide of this carousel.</p>
-				<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-			  </div>
-			</div>
-		  </div>
-		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Previous</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Next</span>
-		</button>
-	  </div>
-
-
-	  <!-- Marketing messaging and featurettes
-	  ================================================== -->
-	  <!-- Wrap the rest of the page in another container to center all the content. -->
-
-	  <div class="container marketing">
-
-		<!-- Three columns of text below the carousel -->
-		<div class="row">
-		  <div class="col-lg-4">
-			<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-			<h2>Heading</h2>
-			<p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-			<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-		  </div><!-- /.col-lg-4 -->
-		  <div class="col-lg-4">
-			<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-			<h2>Heading</h2>
-			<p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-			<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-		  </div><!-- /.col-lg-4 -->
-		  <div class="col-lg-4">
-			<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-			<h2>Heading</h2>
-			<p>And lastly this, the third column of representative placeholder content.</p>
-			<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-		  </div><!-- /.col-lg-4 -->
-		</div><!-- /.row -->
-	</main>
-	
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-  </body>
+		</main>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+	</body>
 </html>
