--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	
 		<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 		  <symbol id="bootstrap" viewBox="0 0 118 94">
-			<title>Bootstrap</title>
+			<title>Project Georgia</title>
 			<path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"></path>
 		  </symbol>
 		  <symbol id="instagram" viewBox="0 0 16 16">
@@ -132,8 +132,18 @@
 				  <li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Home</a>
 				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="#">Projects</a>
+				  <li class="nav-item dropdown">
+					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Projects
+					  </a>
+					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<li><a class="dropdown-item" href="./projects/black">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item" href="./projects/yellow">3D animation <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="./projects/green">Encryption app <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="./projects/blue">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><hr class="dropdown-divider"></li>
+						<li><a class="dropdown-item" href="#">Random stuff</a></li>
+					  </ul>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="#">About us</a>
@@ -202,25 +212,22 @@
 			<div class="container marketing">
 				<div class="row">
 				  <div class="col-lg-4">
-					<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-					<h2>Heading</h2>
-					<p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+					<object width="40%" height="40%" data="./img/Blender.svg" type="image/svg+xml"></object>
+					<h2>Blender</h2>
+					<p>Used for 3D modeling and animations.</p>
+					<p><a class="btn btn-secondary" href="https://www.blender.org/">Visit &raquo;</a></p>
 				  </div>
 				  <div class="col-lg-4">
-					<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-					<h2>Heading</h2>
-					<p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+					<object width="40%" height="40%" data="./img/Clip_Studio_Paint.svg" type="image/svg+xml"></object>
+					<h2>Clip Studio Paint</h2>
+					<p>Used for character design.</p>
+					<p><a class="btn btn-secondary" href="https://www.clipstudio.net/">Visit &raquo;</a></p>
 				  </div>
 				  <div class="col-lg-4">
-					<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-					<h2>Heading</h2>
-					<p>And lastly this, the third column of representative placeholder content.</p>
-					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+					<object width="40%" height="40%" data="./img/Android_Studio.svg" type="image/svg+xml"></object>
+					<h2>Android Stduio</h2>
+					<p>Used for development of our encryption app.</p>
+					<p><a class="btn btn-secondary" href="https://developer.android.com/studio">Visit &raquo;</a></p>
 				  </div>
 				</div>
 			</div>
@@ -235,11 +242,11 @@
 			  <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
 				<svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
 			  </a>
-			  <span class="text-muted">&copy; 2021 Company, Inc</span>
+			  <span class="text-muted">&copy; 2021 Project Georgia</span>
 			</div>
 
 			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-			  <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/><a xlink:href="https://www.instagram.com/project.georgia/"></svg></a></li>
+			  <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/project.georgia/"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
 			</ul>
 		</footer>
 	</div>
