--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<header>
 		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="#">Project Georgia</a>
+			  <a class="navbar-brand" href="https://projectgeorgia.github.io/"><img src="./img/icon_lg.png" alt="" width="30" height="30" class="d-inline-block align-text-top"><b> Project Georgia</b></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
@@ -138,7 +138,7 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="./projects/black">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="./projects/yellow">3D animation <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="./projects/yellow">Animation <span class="badge bg-warning text-dark">Yellow</span></a></li>
 						<li><a class="dropdown-item" href="./projects/green">Encryption app <span class="badge bg-success">Green</span></a></li>
 						<li><a class="dropdown-item" href="./projects/blue">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
