--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<header>
 		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="https://projectgeorgia.github.io/"><img src="./img/icon_lg.png" alt="" width="30" height="30" class="d-inline-block align-text-top"><b> Project Georgia</b></a>
+			  <a class="navbar-brand" href="https://projectgeorgia.github.io/"><img src="./img/icon_lg.png" alt="" width="35" height="35" class="d-inline-block align-text-top"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
