--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 				</div>
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+					<img src="./img/intro.jpg" class="d-block" style="object-fit: cover;">
 
 					<div class="container">
 					  <div class="carousel-caption text-start">
-						<h1>Project Georgia!</h1>
+						<h1>Project Georgia</h1>
 						<p>A place full of little dreams.</p>
 						<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
 					  </div>
@@ -181,9 +181,9 @@
 
 					<div class="container">
 					  <div class="carousel-caption">
-						<h1>Another example headline.</h1>
-						<p>Some representative placeholder content for the second slide of the carousel.</p>
-						<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+						<h1>IKEA Chair</h1>
+						<p>First render with proper texture.</p>
+						<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
@@ -192,8 +192,8 @@
 
 					<div class="container">
 					  <div class="carousel-caption text-end">
-						<h1>One more for good measure.</h1>
-						<p>Some representative placeholder content for the third slide of this carousel.</p>
+						<h1>Step ZERO</h1>
+						<p>My first render!</p>
 						<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
 					  </div>
 					</div>
