--- a/index.html
+++ b/index.html
@@ -143,14 +143,17 @@
 						<li><a class="dropdown-item" href="./projects/green">Encryption app <span class="badge bg-success">Green</span></a></li>
 						<li><a class="dropdown-item" href="./projects/blue">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="#">Random stuff</a></li>
+						<li><a class="dropdown-item" href="./projects">Random stuff</a></li>
 					  </ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">About us</a>
+					<a class="nav-link" href="./gallery">Gallery</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Contact us</a>
+					<a class="nav-link" href="./about">About us</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="./contact">Contact us</a>
 				  </li>
 				</ul>
 			  </div>
@@ -173,29 +176,29 @@
 					  <div class="carousel-caption text-start">
 						<h1>Project Georgia</h1>
 						<p>A place full of little dreams.</p>
-						<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+						<p><a class="btn btn-lg btn-primary" href="./about">Learn more</a></p>
 					  </div>
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+					<img src="./gallery/chair1.png" class="d-block" style="object-fit: cover;">
+					
 					<div class="container">
 					  <div class="carousel-caption">
 						<h1>IKEA Chair</h1>
 						<p>First render with proper texture.</p>
-						<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-primary" href="./gallery#?=chair1">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+					<img src="./gallery/donut1.png" class="d-block" style="object-fit: cover;">
+					
 					<div class="container">
 					  <div class="carousel-caption text-end">
 						<h1>Step ZERO</h1>
 						<p>My first render!</p>
-						<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-primary" href="./gallery#?=donut1">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
