--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				</div>
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img src="./img/intro.jpg" class="d-block" style="object-fit: cover;">
+					<img src="./img/intro.jpg" class="d-block w-100" style="object-fit: cover;">
 
 					<div class="container">
 					  <div class="carousel-caption text-start">
@@ -181,7 +181,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./gallery/chair1.png" class="d-block" style="object-fit: cover;">
+					<img src="./gallery/chair1.png" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption">
@@ -192,7 +192,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./gallery/donut1.png" class="d-block" style="object-fit: cover;">
+					<img src="./gallery/donut1.png" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption text-end">
