--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/png" href="./img/icon_sm.png"/>
+		<link rel="icon" type="image/png" href="./img/favicon.png"/>
 		
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -124,7 +124,7 @@
 		<header>
 		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="https://projectgeorgia.github.io/"><img src="./img/icon_lg.png" alt="" width="35" height="35" class="d-inline-block align-text-top"></a>
+			  <a class="navbar-brand" href="https://projectgeorgia.github.io/"><img src="./img/icon.png" alt="" width="35" height="35" class="d-inline-block align-text-top"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
@@ -176,7 +176,7 @@
 					  <div class="carousel-caption text-start">
 						<h1>Project Georgia</h1>
 						<p>A place full of little dreams.</p>
-						<p><a class="btn btn-lg btn-primary" href="./about">Learn more</a></p>
+						<p><a class="btn btn-lg btn-light" href="./about">Learn more</a></p>
 					  </div>
 					</div>
 				  </div>
@@ -187,7 +187,7 @@
 					  <div class="carousel-caption">
 						<h1>IKEA Chair</h1>
 						<p>First render with proper texture.</p>
-						<p><a class="btn btn-lg btn-primary" href="./gallery#?=chair1">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-dark" href="./gallery#?=chair1">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
@@ -198,7 +198,7 @@
 					  <div class="carousel-caption text-end">
 						<h1>Step ZERO</h1>
 						<p>My first render!</p>
-						<p><a class="btn btn-lg btn-primary" href="./gallery#?=donut1">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-warning" href="./gallery#?=donut1">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
@@ -244,7 +244,7 @@
 		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 			<div class="col-md-4 d-flex align-items-center">
 			  <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-				<svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+				<object class="bi" width="30" height="30" data="./img/icon.svg" type="image/svg+xml"></object>
 			  </a>
 			  <span class="text-muted">&copy; 2021 Project Georgia</span>
 			</div>
