--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="./projects/black">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="./projects/yellow">Animation <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="./projects/yellow">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
 						<li><a class="dropdown-item" href="./projects/green">Encryption app <span class="badge bg-success">Green</span></a></li>
 						<li><a class="dropdown-item" href="./projects/blue">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
@@ -147,7 +147,7 @@
 					  </ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="./gallery">Gallery</a>
+					<a class="nav-link" href="./gallery/view">Gallery</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="./about">About us</a>
@@ -187,7 +187,7 @@
 					  <div class="carousel-caption">
 						<h1>IKEA Chair</h1>
 						<p>First render with proper texture.</p>
-						<p><a class="btn btn-lg btn-dark" href="./gallery#?=chair1">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-dark" href="./gallery/view#yellow;chair1">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
@@ -198,7 +198,7 @@
 					  <div class="carousel-caption text-end">
 						<h1>Step ZERO</h1>
 						<p>My first render!</p>
-						<p><a class="btn btn-lg btn-warning" href="./gallery#?=donut1">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-warning" href="./gallery/view#yellow;donut1">Browse gallery</a></p>
 					  </div>
 					</div>
 				  </div>
