--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="./projects/black">Film <span class="badge bg-dark">Black</span></a></li>
 						<li><a class="dropdown-item" href="./projects/yellow">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="./projects/green">Encryption app <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="./projects/green">Programming <span class="badge bg-success">Green</span></a></li>
 						<li><a class="dropdown-item" href="./projects/blue">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="./projects">Random stuff</a></li>
+						<li><a class="dropdown-item" href="./projects">All projects</a></li>
 					  </ul>
 				  </li>
 				  <li class="nav-item">
@@ -181,7 +181,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./gallery/chair1.png" class="d-block w-100" style="object-fit: cover;">
+					<img src="./gallery/yellow/chair1.png" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption">
@@ -192,7 +192,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./gallery/donut1.png" class="d-block w-100" style="object-fit: cover;">
+					<img src="./gallery/yellow/donut1.png" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption text-end">
