--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 						Projects
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="./projects/black">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="./projects/yellow">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="./projects/green">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="./projects/blue">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="./projects/black/view">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item" href="./projects/yellow/view">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="./projects/green/view">Programming <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="./projects/blue/view">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="./projects">All projects</a></li>
+						<li><a class="dropdown-item" href="./projects/">All projects</a></li>
 					  </ul>
 				  </li>
 				  <li class="nav-item">
@@ -187,7 +187,7 @@
 					  <div class="carousel-caption">
 						<h1>IKEA Chair</h1>
 						<p>First render with proper texture.</p>
-						<p><a class="btn btn-lg btn-dark" href="./gallery/view#yellow;chair1">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-dark" href="./projects/yellow/view#2">Browse project</a></p>
 					  </div>
 					</div>
 				  </div>
@@ -198,7 +198,7 @@
 					  <div class="carousel-caption text-end">
 						<h1>Step ZERO</h1>
 						<p>My first render!</p>
-						<p><a class="btn btn-lg btn-warning" href="./gallery/view#yellow;donut1">Browse gallery</a></p>
+						<p><a class="btn btn-lg btn-warning" href="./projects/yellow/view#1">Browse project</a></p>
 					  </div>
 					</div>
 				  </div>
