--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
 						Projects
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="./projects/black/view">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="./projects/yellow/view">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="./projects/green/view">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="./projects/blue/view">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item disabled" href="./projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item disabled" href="./projects/yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="./projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item disabled" href="./projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="./projects/">All projects</a></li>
 					  </ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="./gallery/view">Gallery</a>
+					<a class="nav-link" href="./gallery">Gallery</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="./about">About us</a>
