--- a/index.html
+++ b/index.html
@@ -181,24 +181,24 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./gallery/yellow/chair1.png" class="d-block w-100" style="object-fit: cover;">
+					<img src="./projects/yellow/media/chair1.png" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption">
 						<h1>IKEA Chair</h1>
 						<p>First render with proper texture.</p>
-						<p><a class="btn btn-lg btn-dark" href="./projects/yellow/view#2">Browse project</a></p>
+						<p><a class="btn btn-lg btn-dark" href="./projects/view#yellow2">Browse project</a></p>
 					  </div>
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./gallery/yellow/donut1.png" class="d-block w-100" style="object-fit: cover;">
+					<img src="./projects/yellow/media/donut1.png" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption text-end">
 						<h1>Step ZERO</h1>
 						<p>My first render!</p>
-						<p><a class="btn btn-lg btn-warning" href="./projects/yellow/view#1">Browse project</a></p>
+						<p><a class="btn btn-lg btn-warning" href="./projects/view#yellow1">Browse project</a></p>
 					  </div>
 					</div>
 				  </div>
