--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<header>
 		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="https://projectgeorgia.github.io/"><img src="./img/icon.png" alt="" width="35" height="35" class="d-inline-block align-text-top"></a>
+			  <a class="navbar-brand" href="/"><img src="./img/icon.png" width="35" height="35" class="d-inline-block align-text-top"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
@@ -139,8 +139,8 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item disabled" href="./projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item disabled" href="./projects/yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="./projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="./projects/yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item disabled" href="./projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
 						<li><a class="dropdown-item disabled" href="./projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="./projects/">All projects</a></li>
@@ -230,7 +230,7 @@
 				  <div class="col-lg-4">
 					<object width="40%" height="40%" data="./img/Android_Studio.svg" type="image/svg+xml"></object>
 					<h2>Android Stduio</h2>
-					<p>Used for development of our encryption app.</p>
+					<p>Used for development of our Android apps.</p>
 					<p><a class="btn btn-secondary" href="https://developer.android.com/studio">Visit &raquo;</a></p>
 				  </div>
 				</div>
