--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -13,6 +13,16 @@
 		
 		<style>
 		
+			/* GLOBAL STYLES
+			-------------------------------------------------- */
+			/* Padding below the footer and lighter body text */
+
+			body {
+			  padding-top: 3rem;
+			  padding-bottom: 3rem;
+			  color: #5a5a5a;
+			}
+			
 			.bd-placeholder-img {
 			font-size: 1.125rem;
 			text-anchor: middle;
