--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 						Projects
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item disabled" href="./projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item" href="./projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
 						<li><a class="dropdown-item" href="./projects/yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item disabled" href="./projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item disabled" href="./projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="./projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="./projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="./projects/">All projects</a></li>
 					  </ul>
@@ -185,7 +185,7 @@
 					
 					<div class="container">
 					  <div class="carousel-caption">
-						<h1>IKEA Chair</h1>
+						<h1>IKEA chair</h1>
 						<p>First render with proper texture.</p>
 						<p><a class="btn btn-lg btn-dark" href="./projects/view#yellow2">Browse project</a></p>
 					  </div>
