--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -116,8 +116,10 @@
 							File.send(null);
 							
 							var database = JSON.parse(content);
+							var ori = "";
 							for (let i in database) {
-								document.getElementById('article').innerHTML = "<div class='col'><div class='card shadow-sm'><img class='bd-placeholder-img card-img-top w-100' width='100%' height='225' src='./preview/yellow" + database[i].ID + ".jpg' focusable='false' style='object-fit: cover;'/><div class='card-body'><p class='card-text'>" + database[i].Title + "</p><div class='d-flex justify-content-between align-items-center'><button type='button' class='btn btn-sm btn-outline-secondary'>View</button><small class='text-muted'>" + database[i].Date + "</small></div></div></div></div>" + document.getElementById('article').innerHTML;
+								ori = document.getElementById('article');
+								document.getElementById('article').innerHTML = "<div class='col'><div class='card shadow-sm'><img class='bd-placeholder-img card-img-top w-100' width='100%' height='225' src='./preview/yellow" + database[i].ID + ".jpg' focusable='false' style='object-fit: cover;'/><div class='card-body'><p class='card-text'>" + database[i] + "</p><div class='d-flex justify-content-between align-items-center'><button type='button' class='btn btn-sm btn-outline-secondary'>View</button><small class='text-muted'>" + database[i].Date + "</small></div></div></div></div>" + ori;
 							}
 						</script>
 					
