--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -28,6 +28,12 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
+			
+			#header {
+			  background-image: url("./media/intro.jpg");
+			  background-position: center;
+			  background-size: 100% auto;
+			}
 		
 		</style>
 	</head>
@@ -80,11 +86,11 @@
 		</header>
 	
 		<main>
-			<section class="py-5 text-center container">
+			<section class="py-5 text-center container" id="header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">Animation & Render</h1>
-					<p class="lead text-muted">Rendered in blender.</p>
+					<h1 class="fw-light text-light">Animation & Render</h1>
+					<p class="lead text-light">Rendered in blender.</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
 					  <a href="../../gallery" class="btn btn-secondary my-2">View in gallery</a>
