--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -103,7 +103,7 @@
 				
 				for (let i in database) {
 					if (database[i].ID == id) {
-						document.getElementById("title").innerHTML = database[id].Title;
+						document.getElementById("title").innerHTML = database[i].Title;
 					}
 				}
 			
