--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -87,8 +87,8 @@
 			<section class="py-5 text-center container">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light text-light" id="Title"></h1>
-					<p class="lead text-light" id="Date"></p>
+					<h1 class="fw-light" id="Title"></h1>
+					<p class="lead text-muted" id="Date"></p>
 				  </div>
 				</div>
 			</section>
