--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -94,7 +94,7 @@
 			</section>
 			
 			<div class="container">
-				<img id="Preview">
+				<img class="d-block w-100" id="Preview">
 			
 				<script>
 					var File = new XMLHttpRequest();
