--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -89,8 +89,8 @@
 				  <div class="col-lg-6 col-md-8 mx-auto">
 					<h1 class="fw-light" id="Title"></h1>
 					<p class="lead text-muted" id="Date"></p>
-					<img class="d-block w-100" id="MediaImage">
-					<video class="d-block w-100" id="MediaVideo" controls></video>
+					<img class="w-100" id="MediaImage">
+					<video class="w-100" id="MediaVideo" controls></video>
 				
 					<script>
 						var File = new XMLHttpRequest();
