--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -29,7 +29,7 @@
 			  color: #5a5a5a;
 			}
 			
-			.container {
+			#Header {
 			  padding-top: 3rem;
 			}
 		
@@ -84,7 +84,7 @@
 		</header>
 	
 		<main>
-			<section class="py-5 text-center container">
+			<section class="py-5 text-center container" id="Header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
 					<h1 class="fw-light" id="Title"></h1>
