--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -63,9 +63,9 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="../black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="#">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="../green/">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="../blue/">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="#">Animations & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="../green/">Applications <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="../blue/">Others <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="../">All projects</a></li>
 					  </ul>
@@ -89,7 +89,7 @@
 			<section class="py-5 text-center container" id="header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light text-light">Animation & Render</h1>
+					<h1 class="fw-light text-light">Animations & Render</h1>
 					<p class="lead text-light">Rendered in blender.</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
