--- a/projects/blue/index.html
+++ b/projects/blue/index.html
@@ -57,9 +57,9 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="../black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="../yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="../green/">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="#">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="../yellow/">Animations & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="../green/">Applications <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="#">Others <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="../">All projects</a></li>
 					  </ul>
@@ -83,7 +83,7 @@
 			<section class="py-5 text-center container">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">AI</h1>
+					<h1 class="fw-light">Others</h1>
 					<p class="lead text-muted">:)</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
