--- a/projects/index.html
+++ b/projects/index.html
@@ -57,9 +57,9 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="../projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="../projects/yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="../projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="../projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="../projects/yellow/">Animations & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="../projects/green/">Applications <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="../projects/blue/">Others <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="#">All projects</a></li>
 					  </ul>
