--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -61,9 +61,9 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="../black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="../yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="../green/">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="../blue/">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="../yellow/">Animations & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="../green/">Applications <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="../blue/">Others <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="../">All projects</a></li>
 					  </ul>
