--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -137,8 +137,7 @@
 									<th scope="col">Download Link</th>
 								</tr>
 							</thead>
-							<tbody>
-								<div id="Download"></div>
+							<tbody id="Download">
 							</tbody>
 						</table>
 					</div>
