--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -137,7 +137,8 @@
 									<th scope="col">Download Link</th>
 								</tr>
 							</thead>
-							<tbody id="Download">
+							<tbody>
+								<div id="Download"></div>
 							</tbody>
 						</table>
 					</div>
