--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -137,8 +137,7 @@
 									<th scope="col">Download Link</th>
 								</tr>
 							</thead>
-							<tbody>
-								<div id="Download"></div>
+							<tbody id="Download">
 							</tbody>
 						</table>
 					</div>
@@ -193,7 +192,8 @@
 						first = true;
 						for (let i3 in database[i].Download_version) {
 							if (first) {
-								document.getElementById("Download").innerHTML += '<tr><th scope="row">' + database[i].Download_version[i3] + '<span class="badge rounded-pill bg-success">Latest</span></th><td>' + database[i].Download_date[i3] + '</td><td><a href="' + database[i].Download_link[i3] + '">' + database[i].Download_type[i3] + '</a></td></tr>';
+								document.getElementById("Download").innerHTML += '<tr><th scope="row"><p>' + database[i].Download_version[i3] + '</p><span class="badge rounded-pill bg-success">Latest</span></th><td>' + database[i].Download_date[i3] + '</td><td><a href="' + database[i].Download_link[i3] + '">' + database[i].Download_type[i3] + '</a></td></tr>';
+								first = false;
 							} else {
 								document.getElementById("Download").innerHTML += '<tr><th scope="row">' + database[i].Download_version[i3] + '</th><td>' + database[i].Download_date[i3] + '</td><td><a href="' + database[i].Download_link[i3] + '">' + database[i].Download_type[i3] + '</a></td></tr>';
 							}
